--- a/liwords-ui/src/gameroom/scss/gameroom.scss
+++ b/liwords-ui/src/gameroom/scss/gameroom.scss
@@ -52,6 +52,7 @@ p.streak-loss {
   }
 }
 .game-container {
+  padding-bottom: 24px;
   .ant-card {
     border-radius: 8px;
     .ant-card-body {
@@ -673,6 +674,9 @@ p.streak-loss {
   margin: 12px 0;
   position: relative;
   left: -12px;
+  @include colorModed() {
+    background-color: m($background);
+  }
   .rack {
     width: $tile-size-desktop * 8.5;
   }
@@ -1235,9 +1239,11 @@ p.rune {
 .game-controls {
   display: flex;
   position: relative;
-  left: -12px;
-  width: 100%;
+  left: -24px;
+  width: 100vw;
+  max-width: 560px;
   min-height: 32px;
+  padding: 15px 45px;
   margin: 0 auto 12px;
   justify-content: space-evenly;
   white-space: nowrap;
@@ -1285,7 +1291,41 @@ p.rune {
     margin-right: 0;
   }
 }
-
+.examiner-controls .ant-affix {
+  transform: translateX(-6px);
+  @include colorModed() {
+    background-color: m($background);
+    border-bottom: 1px solid m($gray-subtle);
+  }
+}
+.end-message + .examiner-controls {
+  div[aria-hidden="true"] {
+    display: none;
+  }
+  .ant-affix {
+    position: static !important;
+    height: auto !important;
+    @include colorModed() {
+      border-bottom: 0;
+    }
+  }
+}
+.examiner-controls, .rack-affix  {
+  @media (min-width: $screen-tablet-min) {
+    div[aria-hidden="true"] {
+      display: none;
+    }
+    .ant-affix {
+      transform: translateX(0);
+      position: static !important;
+      height: auto !important;
+      border-bottom: transparent;
+      @include colorModed() {
+        border-bottom: 0;
+      }
+    }
+  }
+}
 .end-message {
   @include colorModed() {
     background-color: m($primary-middle);
@@ -1334,6 +1374,9 @@ p.rune {
   }
   .rack-container {
     left: 0;
+    @include colorModed() {
+      background: transparent;
+    }
   }
   .rack {
     width: (48 + $tile-size-tablet * 8);
@@ -1409,6 +1452,7 @@ p.rune {
   .game-controls {
     justify-content: center;
     left: 0;
+    width: 100%;
     .secondary-controls {
       flex-direction: row;
       width: auto;
@@ -1420,7 +1464,7 @@ p.rune {
       }
     }
     button.ant-btn {
-      font-size: 12px;
+      font-size: 14px;
       margin: 0 6px;
       &.play {
         order: 2;
