--- a/liwords-ui/src/settings/settings.scss
+++ b/liwords-ui/src/settings/settings.scss
@@ -22,7 +22,7 @@
   }
   h3 {
     font-family: $font-default;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     margin-bottom: 24px;
   }
